<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <ImageView
        android:id="@+id/arowblack"
        android:layout_width="27dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arowblack" />

    <TextView

        android:id="@+id/Setting_Activity_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/Setting_Activity_Text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/arowblack"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        android:paddingBottom="21dp"
        app:layout_constraintTop_toBottomOf="@+id/Setting_Activity_Text"
        tools:layout_editor_absoluteX="-1dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:minHeight="48dp"
                android:text="@string/Black_Theme"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:text="@string/ShareApplication"

            android:textColor="@color/black"
            android:textSize="20sp"

            app:drawableEndCompat="@drawable/share"
            app:iconGravity="textEnd"
            app:iconPadding="50dp"

            app:iconTint="@color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:text="@string/writeToSupport"

            android:textColor="@color/black"
            android:textSize="20sp"

            app:drawableEndCompat="@drawable/support"
            app:iconGravity="textEnd"
            app:iconPadding="80sp"
            app:iconTint="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:text="@string/UserAgreement"

            android:textColor="@color/black"
            android:textSize="20sp"

            app:drawableEndCompat="@drawable/arrovforward"
            app:iconGravity="textEnd"
            app:iconPadding="50dp"

            app:iconTint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>